# TMC

./: CMakeLists.txt
Drivers/CMSIS/: system_stm32f4xx.c
Drivers/CMSIS/Include/: stm32f4xx.h
Src/: CMakeLists.txt  config.h  interrupts.c  main.c  setup.c  setup.h
Src/IO/: LED.c  LED.h
Src/Sensors/BNO080/: app.c  app.h  bno080.c  bno080.h  hw.c  hw.h  sh2.h
Src/Std_Periph/inc/: misc.h
Src/Std_Periph/src/: stm32f4xx_rcc.c  stm32f4xx_spi.c
Src/drivers/: GPIO.c  GPIO.h  SPI3.c  SPI3.h  USART1.c  USART1.h  USART3.c  USART3.h
Src/scheduler/: scheduler.c  scheduler.h
Src/tasks/: tasks.c  tasks.h
Src/time/: time.c  time.h
